fix:remove visible scrollbars in browsers

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -3,9 +3,15 @@
   margin: auto;
   height: 200px;
   overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
+}
+
+.Burger::-webkit-scrollbar {
+  display: none;
 }
 
 @media (min-width: 500px) and (max-height: 400px) {
